--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@ footer span a:hover{
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Trieu Tien Nguyen</div>
+                <div class="text-2">Nguyen Duc Tam</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
             </div>
         </div>
@@ -715,8 +715,8 @@ footer span a:hover{
                     <img src="tien (1 of 1).jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Trieu Tien and I'm a <span class="typing-2"></span></div>
-                    <p> - My name is Nguyen Trieu Tien. My life’s mission is to become a professional software engineer, and apply technology to life.<br>
+                    <div class="text">I'm Nguyen Duc Tam and I'm a <span class="typing-2"></span></div>
+                    <p> - My name is Nguyen Duc Tam. My life’s mission is to become a professional software engineer, and apply technology to life.<br>
 
                        - LoveBook, I have been following this quote "Doing what you like is freedom. Liking what you do is happy" as the purpose of my life!<br>
 
@@ -740,7 +740,7 @@ footer span a:hover{
                     <div class="box">
                         <i class="fas fa-school"></i>
                         <div class="text">School</div>
-                        <p>Duy Tan University, Da Nang city, Viet Nam <br> 09/2019 - 08/2023.</p>
+                        <p> Da Nang city, Viet Nam <br> 09/2019 - 08/2023.</p>
                     </div>
                 </div>
                 <div class="card">
@@ -876,7 +876,7 @@ footer span a:hover{
     </section>
     <!-- footer section start -->
     <footer>
-        <span>Created By NguyenTrieuTien | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By Nguyen Duc Tam | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
     </footer>
     <script src="script.js"></script>
     <script>
