--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@ footer span a:hover{
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="tien (1 of 1).jpg" alt="">
+                    <img src="tam (1 of 1).jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Nguyen Duc Tam and I'm a <span class="typing-2"></span></div>
