--- a/index.html
+++ b/index.html
@@ -1,3 +1,34 @@
+Skip to content
+Search or jump to…
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@ductam2909 
+ductam2909
+/
+Ductam2909.github.io
+Public
+1
+00
+Code
+Issues
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+Settings
+Ductam2909.github.io/index.html
+@ductam2909
+ductam2909 Update index.html
+Latest commit 47fba81 1 minute ago
+ History
+ 1 contributor
+952 lines (946 sloc)  24.4 KB
+   
 <!DOCTYPE html>
 <!-- Created By CodingNepal -->
 <html lang="en">
@@ -712,7 +743,7 @@ footer span a:hover{
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="tam (1 of 1).jpg" alt="">
+                    <img src="/ductam2909/Ductam2909.github.io/blob/main/tam.jpg?raw=true" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Nguyen Duc Tam and I'm a <span class="typing-2"></span></div>
