--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@ footer span a:hover{
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="/ductam2909/Ductam2909.github.io/blob/main/tam.jpg?raw=true" alt="">
+                    <img src="https://scontent.fdad1-3.fna.fbcdn.net/v/t1.6435-9/148491413_2827834354101816_3508901409103684907_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=174925&_nc_ohc=kllwPt2SkeIAX8ATCsg&_nc_ht=scontent.fdad1-3.fna&oh=250bcce2c1d5af316e064359e585afc4&oe=61719DFF" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Nguyen Duc Tam and I'm a <span class="typing-2"></span></div>
