--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ section .title::after{
 /* home section styling */
 .home{
     display: flex;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.308), rgba(0, 0, 0, 0.342)), url(tam.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.308), rgba(0, 0, 0, 0.342)), url("tam.jpg");
     height: 100vh;
     color: #fff;
     min-height: 500px;
@@ -831,7 +831,7 @@ footer span a:hover{
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Trieu Tien Nguyen</div>
+                                <div class="sub-title">Nguyen Duc Tam</div>
                             </div>
                         </div>
                         <div class="row">
