--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ section .title::after{
 /* home section styling */
 .home{
     display: flex;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.308), rgba(0, 0, 0, 0.342)), url("tam.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.308), rgba(0, 0, 0, 0.342)), url("tam1.jpg");
     height: 100vh;
     color: #fff;
     min-height: 500px;
