--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@ section .title::after{
 /* home section styling */
 .home{
     display: flex;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.308), rgba(0, 0, 0, 0.342)), url("tam3.jpg");
-    height: 300vh;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.308), rgba(0, 0, 0, 0.342)), url("cvtam.png");
+    height: 100vh;
     color: #fff;
     min-height: 500px;
     background-size: cover;
