--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-<!--A Design by W3layouts
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -562,14 +557,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			   
 				<div class=" email">
 					<h4>Email</h4>
-					<p><span class="fa fa-envelope"  aria-hidden="true"></span> <a href="mailto:mail@example.com" class="info"> info@example.com</a></p>
-					<p><span class="fa fa-envelope"  aria-hidden="true"></span> <a href="mailto:mail@example.com" class="info"> info@photos.com</a></p>
+					<p><span class="fa fa-envelope"  aria-hidden="true"></span> <a href="nguyenductamqaz123@gmail.com" class="info"> nguyenductamqaz123@gmail.com</a></p>
+					<p><span class="fa fa-envelope"  aria-hidden="true"></span> <a href="ductam123@gmail.com" class="info"> ductam123@gmail.com</a></p>
 				</div>
 
 				<!-- Newsletter -->
 				<div class="newsletter">
 					<h4>Follow</h4>
-					 <span class="fa fa-facebook font-icon" aria-hidden="true"> </span>
+					<a href="https://www.facebook.com/ductam29k09/"><span class="fa fa-facebook icon" aria-hidden="true"> </span></a>
 				     <span class="fa fa-twitter font-icon" aria-hidden="true"> </span>
 					 <span class="fa fa-google-plus font-icon"  aria-hidden="true"> </span>
 					 <span class="fa fa-dribbble font-icon" aria-hidden="true"> </span>
