--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="banner_text_w3layouts">
 							<h3>HI I AM NGUYEN DUC TAM.</h3>
 							<span> </span>
-							<p>i am programmer </p>
+							<p>I am programmer </p>
 						</div>
 					</li>
 					 <li>	
 						<div class="banner_text_w3layouts">
-							<h3>I love Programming.</h3>
+							<h3>I LOVE PROGRAMMING</h3>
 							<span> </span>
 							<p>I develop web sites and mobile apps</p>
 						</div>
@@ -578,7 +578,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 			<!-- Copyright -->
 			<div class="copyright">
-				<p>&copy;DUCTAM2909-cv| Design by NGUYEN DUC TAM<a href="https://ductam2909.github.io/" target="_blank">ductam2909.github.io </a><a href="#home" class="to-top scroll" title="To Top"><span class="fa fa-chevron-up"></span></a></p>
+				<p>&copy;DUCTAM2909-cv| Design by NGUYEN DUC TAM <a href="https://ductam2909.github.io/" target="_blank">ductam2909.github.io </a><a href="#home" class="to-top scroll" title="To Top"><span class="fa fa-chevron-up"></span></a></p>
 			</div>
 			<!-- //Copyright -->
 
