--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				   
 					<li>	
 						<div class="banner_text_w3layouts">
-							<h3>HI I AM NGUYEN DUC TAM.</h3>
+							<h3>HI, I AM NGUYEN DUC TAM.</h3>
 							<span> </span>
 							<p>I am programmer </p>
 						</div>
