--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 				<div class=" phone">
 					<h4>Phone</h4>
-					<a href="sms:0983449642"><p><span class="fa fa-phone" aria-hidden="true"></span>0983449642</p></a>
+					<a href="tel:0983449642"><p><span class="fa fa-phone" aria-hidden="true"></span>0983449642</p></a>
 					<!-- /<p><span class="fa fa-phone" aria-hidden="true"></span> +1 (112) 562-7114</p> -->
 				</div>
               
