--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li>
 							<ul class="agileits-address-text">
 								<li><b>PHONE : </b></li>
-								<li>+0983449642</li>
+								<li><a href="tel:0983449642">0983449642</a></li>
 							</ul>
 						</li>
 						<li>
@@ -550,7 +550,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 				<div class=" phone">
 					<h4>Phone</h4>
-					<a href="tel:0983449642"><p><span class="fa fa-phone" aria-hidden="true"></span>0983449642</p></a>
+					<p><span class="fa fa-phone" aria-hidden="true"></span><a href="tel:0983449642">0983449642</a></p>
 					<!-- /<p><span class="fa fa-phone" aria-hidden="true"></span> +1 (112) 562-7114</p> -->
 				</div>
               
